tg_parser/tests/invalid/identifier_in_simulation_expr.tg
simulate NAND2(a=a, b=1);
